--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.4",
+    "@mui/material": "^5.10.5",
+    "@react-google-maps/api": "^2.12.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,8 +17,12 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-custom-image-loader.": "^1.0.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
+    "react-google-autocomplete": "^2.7.0",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-loader-spinner": "^5.3.3",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
